* 2013-05-08 - marc.arens@open-xchange.com

 - Fix for bug 26335: Only wait for a request body if headers indicate a body

* 2013-05-08 - thorben.betten@open-xchange.com

 - Fix for bug 26464: Avoid buffer overflow through interpreting infinite locking as locked for 10 years

* 2013-05-07 - martin.herfurth@open-xchange.com

 - Fix for bug 26400: TimeZone Parameter for ITIP analyze call had impact on the object itself.
 - Fix for bug 26418: Shared folder id in notification mail headers.

* 2013-05-07 - marcus.klein@open-xchange.com

 - Fix for bug 26354: Using the same row locks for all methods modifying the user attributes to avoid deadlocks.

* 2013-05-07 - thorben.betten@open-xchange.com

 - Fix for bug 26382: Listen to file storage events, too
 - Fix for bug 26346: Detect a canceled OAuth authentication process
 - Fix for bug 26265: Add more logging properties when trying to output a message
 - Preparation to fix bug 26392: Maintain contact's image data on convert request
 - Fix for bug 25982: Accept context name/identifier as a valid tag name that applies only to associated context

* 2013-05-06 - thorben.betten@open-xchange.com

 - Fix for bug 24786: Set appropriate error category to display more meaningful error message

* 2013-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 26105: Add proper context identifier to distributed event

* 2013-05-04 - thorben.betten@open-xchange.com

 - Fix for bug 26359: Deal with possibly absent CommonEvent instance
 - Fix for bug 26360: Moved source bundles from 'lib' to its own 'source' directory and changed MANIFEST.MF + .classpath files accordingly

* 2013-05-03 - marcus.klein@open-xchange.com

 - Fix for bug 26323: Deal with multi-threading problem if OSGi cache service gets unavailable.

* 2013-05-03 - thorben.betten@open-xchange.com

 - Fix for bug 26341: Don't stick to certain values, but only check existence of associated option
 - Fix for bug 26305: Obtain group names directly from JCS cache